[tool.poetry]
name = "my-crawler"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
crawlee = {version = "*", extras = ["playwright"]}
beautifulsoup4 = "^4.12.3"
trafilatura = "^1.12.2"
newspaper3k = "^0.2.8"
python-readability = "^0.0.2"
spacy = "^3.8.2"
yake = "^0.4.8"
price-parser = "^0.3.4"
readability-lxml = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
